--- a/backend/docker-compose.yml
+++ b/backend/docker-compose.yml
@@ -1,7 +1,7 @@
 version: '3.8'
 services:
   app:
-    container_name: vc_finder
+    container_name: hack-backend
     build:
       context: .
       dockerfile: Dockerfile
