--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -6,6 +6,13 @@ RUN mkdir /src
 
 WORKDIR /src
 
+# Install system dependencies for audio processing
+RUN apt-get update && apt-get install -y \
+    ffmpeg \
+    libsndfile1 \
+    libportaudio2 \
+    && rm -rf /var/lib/apt/lists/*
+
 COPY requirements.txt /src/requirements.txt
 
 RUN pip install --no-cache-dir -r /src/requirements.txt
